# autoe2e

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: e2e.yml
demo/: .env.example  docker-compose.yml  spec.yml
demo/api/: Dockerfile  main.py  requirements.txt
playbooks/: collect_artifacts.yml  down.yml  status.yml  up.yml
src/autoe2e/: __init__.py  ansible_runner.py  cli.py  config.py  docker_runner.py  reporter.py  runner.py
tests/: __init__.py  conftest.py  test_crud.py  test_health.py  test_negative.py
